RAP-96 Improve performance of retrieving builds